<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/nama_lengkap"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/lv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/nomor_induk_mahasiswa"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/tv_Nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix"
            android:autofillHints="" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="30dp"
            android:text="@string/program_studi"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/lv_prodi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <Button
            android:id="@+id/btn_ubah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ubah"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_hapus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hapus"
            android:textColor="@color/white" />


    </LinearLayout>
</ScrollView>